--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
+    "nest-winston": "^1.7.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
